fix area of circle formula

--- a/wk3-day3-homework.html
+++ b/wk3-day3-homework.html
@@ -119,7 +119,7 @@
   /* Radius */
 
   function radiusNumber(num) {
-      var radiusNumber = (num) * 2 * Math.PI ;
+      var radiusNumber = (num) * (num) * Math.PI ;
       document.getElementById("solution").innerHTML = 'The area of circle with radius ' + num + ' is ' + radiusNumber;
   }
       
